[Fixes #61504548] - Grey Background Behind Buttons On Signup/Login Dialog
Removed grey background behind auth dialog buttons.

--- a/web/knotis/contrib/auth/static/knotis/auth/css/auth.css
+++ b/web/knotis/contrib/auth/static/knotis/auth/css/auth.css
@@ -13,3 +13,7 @@
     opacity: 1.0;
     filter: alpha(opacity=100);
 }
+
+.modal-footer.buttonHolder {
+    background-color: inherit;
+}
